fixing google from app